Fix visibility : Popup Colored Text

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -2061,21 +2061,7 @@
 					}
 				}
 			}
-		}
-	// Popup Menu
-		#document-hover-preview__popup {
-			.RichTextViewer {
-				.bold.highlight-color--red,
-				.bold.highlight-color--orange,
-				.bold.highlight-color--yellow,
-				.bold.highlight-color--green,
-				.bold.highlight-color--blue,
-				.bold.highlight-color--purple {
-					color: #000;
-					font-weight: 600;
-				}
-			}
-		}
+		}	
 // Portal
 	// Darkmode Support
 		.dark-mode {
